--- a/packages/plugins/datastar/src/loader.html
+++ b/packages/plugins/datastar/src/loader.html
@@ -30,5 +30,18 @@
         })
       )
     })
+
+    // Listen for hash changes and dispatch custom event
+    window.addEventListener('hashchange', function (event) {
+      document.dispatchEvent(
+        new CustomEvent('hashchange', {
+          detail: {
+            oldURL: event.oldURL,
+            newURL: event.newURL,
+            hash: window.location.hash,
+          },
+        })
+      )
+    })
   }
 </script>
