feat(datastar): $clientId now populated with PocketBase realtime subscription client ID

--- a/packages/plugins/datastar/src/loader.html
+++ b/packages/plugins/datastar/src/loader.html
@@ -33,6 +33,8 @@
           subscriptions: ['datastar'],
         }),
       }).catch(console.error)
+
+      patchSignals({ clientId })
     })
 
     source.addEventListener('datastar', function (event) {
