enh(datastar): defer script loading

--- a/packages/plugins/datastar/src/loader.html
+++ b/packages/plugins/datastar/src/loader.html
@@ -1,5 +1,6 @@
 <script
   type="module"
+  defer
   src="https://cdn.jsdelivr.net/gh/starfederation/datastar@main/bundles/datastar.js"
 ></script>
 <script language="javascript">
